--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu teste</title>
+    <style>
+        *{
+            font-family: verdana;
+        }
+        h1{
+            color: blue;
+            padding: 16px;
+            margin: 10px;
+        }
+
+        button{
+            padding: 15px;
+            border-radius: 8px;
+            background-color: yellow;
+            font: 15pt verdana;
+            
+        }
+    </style>
 </head>
 <body>
     <h1>Vou com tudo que tenho para cima desse problema</h1>
+    <button onclick="c1()">Click me!</button>
+    <button onclick="c2()">Click me2!</button>
+    <button onclick="c3()">Click me3!</button>
+    <button onclick="c4()">Click me4!</button>
+    <section id="saida">
+        <h2>As ações estão aqui: </h2>
+    </section>
+
+    <script src="acoes.js"></script>
+    
 </body>
 </html>
