--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         justify-content: center;
         margin-top: 100px;
         width: 100px;
+        opacity: 1;
+        
        }
 
 
@@ -130,9 +132,9 @@
      
     <div class="containeer">
     <div class="container-img">
-        <img style="opacity: 1;" src="https://picsum.photos/id/1/200/300" alt="imagem 1">
-        <img src="https://picsum.photos/id/2/200/300" alt="imagem 2">
-        <img src="https://picsum.photos/id/3/200/300" alt="imagem 3">
+        <img style="opacity: 1;" src="https://picsum.photos/id/5/200/300" alt="imagem 1">
+        <img src="https://picsum.photos/id/6/200/300" alt="imagem 2">
+        <img src="https://picsum.photos/id/7/200/300" alt="imagem 3">
     </div>
     </div>
 
